Tue Oct  09 07:49:30 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* When a widget is destroyed it now removes itself from it's parent
	  list of children.
	* It is now possible to remove pages from a Ewl_Notebook.
	* Fixed possible segv in ewl_theme_get_str().
	* ewl_callback_call* had a possible segv if the callback type was
	  EWL_CALLBACK_DESTROY and it free'd the widget, but still continued
	  traversing the callback list looking for more functions to execute.

Mon Oct  08 02:58:33 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* I've fixed known bugs in the cursor behaviour in Ewl_Entry.
	* Re-worked the whole selection algorithm in Ewl_Entry. At the
	  moment it only displays the selection when you select text, it
	  doesn't copy anything to the clip board. I need to think about
	  what more features would be nice to have before i go any further.

Thu Oct  04 06:22:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed nasty bug in Ewl_Entry, when you do mouse_down after the
	  text, it would set the cursor pos to be to high, this
	  triggered bug when pressing delete/backspace, which could
	  result in a SEGV.
	* Also made the cursor show up after the text when cursor pos
	  is @ end. Before it didn't show up at all.
	* Fixed memleak in __ewl_entry_delete_to_right.

Thu Oct  04 00:47:42 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Now all theme data is read from the current theme's theme.db.
	* Fixed some more unwanted behaviour in Ewl_Table.
	* Made it possible to cache theme data keys & values.
	  You can turn this on & off in ewl_config.

Wed Oct  03 14:56:33 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Reolved lot's of possible segv's in the Ewl_Table code.          
	  Also made it lay out children correctly, still nedds lots of
	  work, but it's a start.

Wed Oct  03 06:13:14 2001 Christopher Rosendahl <crosendahl@northernwatch.com>